fixed alignment issue

--- a/src/app/util/forms-list-view-util/forms-list-view-util.component.css
+++ b/src/app/util/forms-list-view-util/forms-list-view-util.component.css
@@ -140,3 +140,6 @@ cursor: default;
 .xamp-margin-left-icon{
   margin: 0px 5px 5px 5px !important;
 }
+.pg8{
+  top: 0px;
+}
